# bank_client

./: .env.example  README.md  pyproject.toml
data/: operations.json
src/: categories.py  currency_cod.py  decorators.py  descriptions.py  external_api.py  generators.py  main.py  masks.py  my_log.txt  processing.py  read_transaction_excel.py  read_transactions_csv.py  read_transactions_excel.py  utils.py  widget.py
tests/: invalid_transactions_excel.xlsx  my_log.txt  test_account_client.py  test_amount_transaction.py  test_card_client.py  test_card_number_generator.py  test_data.xlsx  test_decoder_date.py  test_filter_alpha_data.py  test_filter_by_currency.py  test_filter_digital_data.py  test_get_data_transactions.py  test_log.py  test_read_transactions_csv.py  test_read_transactions_excel.py  test_select_state_id.py  test_sort_id_date.py  test_transaction_descriptions.py  test_transactions.xlsx  test_transactions_excel.xlsx
